--- a/src/Estral.Host.Web/Features/Pages/Content/Content/Content.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Content/Content/Content.cshtml
@@ -4,6 +4,7 @@
 @using Estral.Host.Web.Infra.Authorization
 @{
     ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = Model.NotFound ? "Not found" : $"{Model.ContentData.Title} | {Model.ContentData.OwnerName}";
+    var canManage = Model.IsOwner || User.IsInRole(Roles.Admin);
 }
 
 @section Head {
@@ -22,22 +23,38 @@
 else
 {
     <header id="content-header">
-        <div>
-            <h2 style="word-break: break-all">
-                @Model.ContentData.Title
-            </h2>
-            <a href="/user/@Model.ContentData.OwnerId" class="link" style="word-break: break-all">
-                @Model.ContentData.OwnerName
-            </a>
-            <p style="word-break: break-all">
-                @Model.ContentData.Description
-            </p>
+
+        <div id="content-header-1">
+            <div>
+                <div style="display: flex; flex-direction: column; gap: 0.125em;">
+                    <h2 style="word-break: break-all">
+                        @Model.ContentData.Title
+                    </h2>
+                    <a href="/user/@Model.ContentData.OwnerId" class="link" style="word-break: break-all">
+                        @Model.ContentData.OwnerName
+                    </a>
+                </div>
+
+                <p style="word-break: break-all">
+                    @Model.ContentData.Description
+                </p>
+            </div>
+
+            <div id="content-buttons">
+                <button type="button" class="button" id="content-button-copy">Copy link</button>
+                @if (canManage)
+                {
+                    <button type="button" class="button" id="content-button-delete">Delete</button>
+                }
+            </div>
         </div>
-        <div id="content-buttons">
-            <button type="button" class="button" id="content-button-copy">Copy link</button>
-            @if (Model.IsOwner || User.IsInRole(Roles.Admin))
+
+        <div id="content-header-2">
+            @foreach (var tag in Model.ContentData.Tags)
             {
-                <button type="button" class="button" id="content-button-delete">Delete</button>
+                <div class="content-tag button">
+                    <a href="/content/browse?tags=@Uri.EscapeDataString(tag.Name)">@tag.Name</a>
+                </div>
             }
         </div>
     </header>
@@ -47,7 +64,10 @@ else
     </div>
 
 
-    @* the beauty of html forms: our DELETE has to be a POST because html forms dont support the DELETE verb for whatever fucking reason *@
+    @* 
+        the beauty of html forms: our DELETE has to be a POST 
+        because html forms dont support the DELETE verb for whatever fucking reason 
+    *@
     <div style="display: none">
         <helper:form id="form" method="POST">
             @Html.AntiForgeryToken()
