--- a/src/Estral.Host.Web/wwwroot/content.css
+++ b/src/Estral.Host.Web/wwwroot/content.css
@@ -2,18 +2,44 @@
 main {
     display: flex;
     flex-direction: column;
+	gap: 0.5em;
 }
 
 #content-header {
-	display: flex; 
+	display: flex;
+	flex-direction: column;
+	gap: 0.5em;
+}
+
+#content-header-1 {
+	display: flex;
 	gap: 0.75em;
 	justify-content: space-between;
+
 }
 
 #content-buttons {
 	display: flex; 
 	flex-direction: column; 
 	gap: 0.5em;
+}
+
+#content-header-2 {
+    display: flex;
+    gap: 0.5em;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.content-tag {
+    padding: 4px;
+    border-radius: 4px;
+    --bg: var(--magenta);
+    --bg-hover: var(--platinum);
+
+	& a {
+		color: black;
+	}
 }
 
 #content-image-container {
