Improve upload page

--- a/src/Estral.Host.Web/wwwroot/app.css
+++ b/src/Estral.Host.Web/wwwroot/app.css
@@ -96,8 +96,12 @@ a {
 .input {
 	padding: 4px;
 	color: black;
-	background-color: var(--platinum);
+	background-color: var(--platinum-lighter);
 	border: 1px solid var(--black-lightest);
+}
+
+.field-validation-error {
+	color: var(--orange);
 }
 
 /* 
