--- a/src/Estral.Host.Web/Features/Pages/Content/Upload/Upload.cshtml
+++ b/src/Estral.Host.Web/Features/Pages/Content/Upload/Upload.cshtml
@@ -5,6 +5,10 @@
     ViewData[Estral.Host.Web.Infra.ViewDataKeys.Title] = "Upload";
 }
 
+@section Head {
+    <link rel="stylesheet" href="/upload.css" />
+}
+
 @if (Model.ErrorMessage is not null)
 {
     <p>@Model.ErrorMessage</p>
@@ -29,29 +33,37 @@
         <div class="form-group">
             <label for="title">Title</label>
             @Html.ValidationMessage(nameof(UploadModel.PostDto.Title))
-            <input required type="text" id="title" name="title" maxlength="@UploadModel.TitleMaxLength" />
+            <input class="input" required type="text" id="title" name="title" maxlength="@UploadModel.TitleMaxLength" />
         </div>
 
         <div class="form-group">
             <label for="description">Description</label>
             @Html.ValidationMessage(nameof(UploadModel.PostDto.Description))
-            <textarea id="description" name="description" maxlength="@UploadModel.DescriptionMaxLength"></textarea>
+            <textarea class="input" id="description" name="description" maxlength="@UploadModel.DescriptionMaxLength"></textarea>
         </div>
 
         <div class="form-group">
             <label>Tags</label>
             @Html.ValidationMessage(nameof(UploadModel.PostDto.Tags))
 
-            <input type="text" id="tag-search" maxlength="@Estral.Host.Web.Database.Tag.NameMaxLength" />
+            <input class="input" type="text" id="tag-search" maxlength="@Estral.Host.Web.Database.Tag.NameMaxLength" />
 
             <div>
                 <button type="button" class="button" id="tag-search-button">Search tags</button>
                 <button type="button" class="button" id="tag-add-button">Add tag</button>
             </div>
 
-            <div id="tag-search-results"></div>
+            <div id="tag-search-results-container">
+                <p>Search results: </p>
+                <div id="tag-search-results">
 
-            <div id="tags"></div>
+                </div>
+            </div>
+
+            <div id="tags-container">
+                <p>Added tags: </p>
+                <div id="tags"></div>
+            </div>
 
             <script type="module">
                 const searchInput = document.querySelector("#tag-search");
@@ -60,20 +72,33 @@
                 const resultsContainer = document.querySelector("#tag-search-results");
                 const tagsContainer = document.querySelector("#tags");
 
+                let abortController = null;
+
                 searchButton.addEventListener("click", async () => {
+                    const text = searchInput.value;
+                    if (text === "") {
+                        return;
+                    }
+
+                    if (abortController !== null) {
+                        abortController.abort();
+                    }
+
+                    abortController = new AbortController();
 
                     resultsContainer.innerHTML = "";
 
-                    const text = searchInput.value;
                     const response = await fetch("/api/tags/search?q=" + encodeURIComponent(text), {
                         headers: {
                             "accept": "application/json"
-                        }
+                        },
+                        signal: abortController.signal
                     });
 
-                    console.log(response);
+                    // ugh theres probably a race condition here
+                    abortController = null;
+
                     const json = await response.json();
-                    console.log(json);
 
                     // json is [ { id: int, name: string } ]
 
@@ -91,9 +116,12 @@
                         pname.innerText = tag.name;
 
                         const button = container.appendChild(document.createElement("button"));
+                        button.type = "button";
                         button.innerText = "Add tag";
+                        button.classList.add("button");
+
                         button.addEventListener("click", () => {
-                            addTag(tag.name);
+                            tryAddTag(tag.name);
                             container.remove();
                         });
 
@@ -102,13 +130,22 @@
                 });
 
                 addButton.addEventListener("click", () => {
-                    const name = searchInput.value;
-                    if (!tagIsAdded(name)) {
-                        addTag(name);
-                    }
+                    tryAddTag(searchInput.value);
                 });
 
-                function addTag(name) {
+                function tryAddTag(name) {
+                    if (!name) {
+                        return;
+                    }
+
+                    if (tagIsAdded(name)) {
+                        return;
+                    }
+
+                    if (Array.from(tagsContainer.children).length >= 10) {
+                        return;
+                    }
+
                     const container = document.createElement("div");
 
                     const input = container.appendChild(document.createElement("input"));
@@ -142,47 +179,11 @@
                 }
 
             </script>
-
-            <style>
-                #tag-search-results {
-                    display: flex;
-                    gap: 0.25em;
-                    flex-wrap: wrap;
-                }
-
-                #tags {
-                    display: flex;
-                    gap: 1em;
-                    flex-wrap: wrap;
-                }
-
-                #tags > div {
-                    display: flex;
-                    gap: 0.5em;
-                    align-items: center;
-                    padding: 4px;
-                    background: var(--magenta);
-                    color: black;
-                    border-radius: 4px;
-                }
-
-                #tags button {
-                    padding: 3px;
-                }
-            </style>
         </div>
 
         <div>
             <button type="submit" class="button">Upload</button>
         </div>
-
-        <style>
-            .form-group {
-                display: flex;
-                flex-direction: column;
-                gap: 0.2em;
-            }
-        </style>
     </form>
 </article>
 
@@ -198,51 +199,3 @@
         preview.addEventListener("load", () => URL.revokeObjectURL(preview.src), { once: true });
     });
 </script>
-
-<style>
-    #page {
-        display: flex;
-        height: 100%;
-        gap: 1em;
-    }
-
-    #left {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 0.2em;
-        flex-grow: 1;
-    }
-
-    #preview {
-        position: relative;
-        flex-grow: 1;
-        display: grid;
-        place-items: center;
-        width: 100%;
-
-        & img {
-            width: calc(100% - 4px);
-            position: absolute;
-            object-fit: contain;
-            max-height: 100%;
-            border: 1px solid gray;
-        }
-    }
-
-    #right {
-        min-width: 35%;
-        display: flex;
-        flex-direction: column;
-        gap: 0.75em;
-        width: var(--default-page-width);
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    @@media screen and (width <= 1000px) {
-        #page {
-            flex-direction: column;
-        }
-    }
-</style>
